--- a/notes/20260118.tex
+++ b/notes/20260118.tex
@@ -33,7 +33,7 @@
 \section{概要}
 古典的な低密度パリティ検査（LDPC）符号は、現代の通信およびストレージシステムの基盤を形成する、広く普及し確立された技術である。この古典的な設定において、正則な次数分布を維持しつつタナーグラフのガース（girth）を大きくすることが、良好な信念伝搬（BP）復号性能と大きな最小距離の両立につながることはよく知られている。しかし、量子設定においては、量子LDPC符号がそのパリティ検査行列間に付加的な直交性制約を満たさなければならないため、この原理を直接適用することはできない。直交性と正則性の両方を単純な手法で強制すると、通常はガースが減少し、最小距離が構造的に上界（アッパーバウンド）に制限されてしまう。
 
-本研究では、正則な検査行列構造を維持しつつ、交換性が制御された置換行列を用い、かつ構成における必要な部分にのみ直交性制約を限定することで、この制限を克服する。この設計は、直交性、正則性、ガース、および最小距離の間の従来のトレードオフを打破し、大きなガースを持ち、かつ従来の距離上界に縛られない量子LDPC符号の構成を可能にする。具体的な実証として、ガース8、(3,12)正則な [[9216, 4612, \le 48]] 量子LDPC符号を構成した。この符号は、BP復号と低計算量の後処理アルゴリズムを組み合わせることで、誤り確率4\%の脱分極チャネルにおいて、$10^{-8}$ という極めて低いフレーム誤り率（FER）を達成することを示す。
+本研究では、正則な検査行列構造を維持しつつ、交換性が制御された置換行列を用い、かつ構成における必要な部分にのみ直交性制約を限定することで、この制限を克服する。この設計は、直交性、正則性、ガース、および最小距離の間の従来のトレードオフを打破し、大きなガースを持ち、かつ従来の距離上界に縛られない量子LDPC符号の構成を可能にする。具体的な実証として、ガース8、(3,12)正則な [[9216, 4612, $\le$ 48]] 量子LDPC符号を構成した。この符号は、BP復号と低計算量の後処理アルゴリズムを組み合わせることで、誤り確率4\%の脱分極チャネルにおいて、$10^{-8}$ という極めて低いフレーム誤り率（FER）を達成することを示す。
 
 \section{はじめに}
 
@@ -48,4 +48,52 @@
 CSS型LDPCの構成において、パリティ検査行列 $H_X$ または $H_Z$ から行を削除しても交換条件 $H_X H_Z^T = 0$ は維持されるが、スタビライザー制約が弱まり、符号空間が拡大する可能性がある。行削除は符号率の調整や行・列重みの制御に用いられるが、一般に距離の保持は保証されない。特に行削除は、低重みのベクトルが $C_X \setminus C_Z^\perp$ または $C_Z \setminus C_X^\perp$ に入ることを許し、新たな低重みの論理演算子を生成して最小距離を減少させることがある。CSS符号において、$C_X = \text{ker}(H_X)$ および $C_Z = \text{ker}(H_Z)$ とすると、$C_X \setminus C_Z^\perp$ または $C_Z \setminus C_X^\perp$ 内の低重みベクトルは非自明な論理演算子となる。その結果、削除された検査行が論理演算子となり、距離を行重みで上界付ける可能性がある。
 
 本研究では、まず、行削除がCSS符号の最小距離を劣化させる一般的なメカニズムについて議論する。次に、一般化萩原・今井符号に対して、行削除による距離劣化を避けるために部分行列の交換性を制御する符号設計手法を確立する。具体的には、APM-LDPC符号の代数的構造を用いて、アクティブな部分のみで直交性を保証し、交換が必要な行ペアの集合を導入して交換条件を局所化する。さらに、相互作用行列の非ゼロパターンを制御することで、削除された行が低重みの論理演算子として出現しないようにし、APM合成規則に基づく逐次構成アルゴリズムを提示する。具体的な実証として、(3,12)正則な $[[9216, 4612, \le 48]]$ 量子LDPC符号を構成し、低計算量の後処理アルゴリズムを組み合わせたBP復号の下で、誤り率4の脱分極チャネルにおいて $10^{-8}$ という低いフレーム誤り率（FER）を達成することを示す。また、交換制御の有無による構成を比較し、低重み論理演算子の抑制を実証する。
+
+\section*{2 問題設定：検査行の削除によって誘発される低重み論理演算子}
+本論文で用いる従来のCSS-LDPC符号の構成をまとめる。
+互いに直交な2つの母正方(巡回)行列$\HHX,\HHZ$を構成する。
+これらの母行列により定義されるCSS符号は一般的にレートが0であるため、内部の行を削除し、残った行を$\HX,\HZ$をアクティブ行列として用いることでレートを調整する。
+つまり、
+\begin{align}
+  \HHX = \begin{bmatrix}
+    \HX \\ \tilde{H}_X
+  \end{bmatrix},
+  \HHZ = \begin{bmatrix}
+    \HZ \\ \tilde{H}_Z
+  \end{bmatrix}
+\end{align}
+であり、$\HX,\HZ$がアクティブ行列、$\tilde{H}_X,\tilde{H}_Z$が潜在行列である。
+
+しかしながら、この構成では、母行列の直交性は潜在行に制約を課し、最小距離を劣化させる。
+最小距離は
+\begin{align}
+  d_Z := \min({wt{\bm{z}}:\bm{z}\in C_X\backslash C_Z^\perp}),\quad
+  d_X := \min({wt{\bm{x}}:\bm{x}\in C_Z\backslash C_X^\perp})
+\end{align}
+により$d_{\text{min}}=\min({d_X,d_Z})$で定義される。
+母行列の直交性
+\begin{align}
+  \HHX(\HHZ)^\top = 0
+\end{align}
+は、アクティブ行列$\HX,\HZ$間の直交性、つまり$\HX\HZ^\top = 0$だけでなく、以下も強制する。
+\begin{align}
+  \HX(\tilde{H}_Z)^\top = 0, \quad
+  \HZ(\tilde{H}_X)^\top = 0
+\end{align}
+つまり、$\Row(\tHX)\in C_Z$ および $\Row(\tHZ)\in C_X$ である。
+したがって$\tHX$の各行$\bm{x}$は$\bm{x}\in C_Z$であり、$\tHZ$の各行$\bm{z}$は$\bm{z}\in C_X$である。
+一般的には$\bm{x}$は$C_X^\top$に属する必要はなく、$\bm{z}$も$C_Z^\perp$に属する必要はなく、このときこれらは論理演算子となる。最小行重み(我々の構成では$L$)が$d_X$および$d_Z$の上界となる。
+
+本研究では、母行列から行を削除することでアクティブ行列$\HX,\HZ$を得るが、潜在行列の低重み行が、$\HX,\HZ$と直交しないようにこれらを設計する。
+つまり、低重みの$\bm{x}\in\Row(\tHX)$に対し$\HZ\bm{x}^\top \neq 0$を、$\bm{z}\in\Row(\tHZ)$に対し$\HX\bm{z}^\top \neq 0$を強制し、つまり$\Row(\tHX)\not\subset C_Z$および$\Row(\tHZ)\not\subset C_X$を強制する。
+同じ議論は、個々の潜在行だけでなく、低重みの線形結合にも適用される。
+
+したがって、潜在ベースの$X,Z$距離の上階を以下で定義する。
+\begin{align}
+  d_X^{\text{lat}} &:= \min\left\{\wt(\bm{x}):\bm{x}\in \Row(\tHX)\cap C_Z\backslash C_X^\perp\right\}\\
+  &=\min\left\{\wt(\bm{x}):\bm{x}\in C_Z, \bm{x}=(\tHX)^\top\bm{u}\text{ for some }\bm{u}, \bm{x}\not\in C_X^\top\right\}\\
+  d_Z^{\text{lat}} &:= \min\left\{\wt(\bm{z}):\bm{z}\in \Row(\tHZ)\cap C_X\backslash C_Z^\perp\right\} \\
+  &=\min\left\{\wt(\bm{z}):\bm{z}\in C_X, \bm{z}=(\tHZ)^\top\bm{u}\text{ for some }\bm{u}, \bm{z}\not\in C_Z^\top\right\}\\
+\end{align}
+提案された設計は、これらの境界を可能な限り大きくすることを目的としている。[26]では、符号語に対応する二進部分行列を非二進体へ持ち上げることで、それらがもはや符号語を表さなくなるようにしている。これは非二進持ち上げによる潜在ベース境界の拡大と見なすことができる。
 \end{document}
