--- a/notes/command.tex
+++ b/notes/command.tex
@@ -32,8 +32,15 @@
 \newcommand{\inv}{^{-1}}
 \newcommand{\HHX}{\hat{H}_X}
 \newcommand{\HHZ}{\hat{H}_Z}
+\newcommand{\HX}{H_X}
+\newcommand{\HZ}{H_Z}
+\newcommand{\tHX}{\tilde{H}_X}
+\newcommand{\tHZ}{\tilde{H}_Z}
 \newcommand{\tr}{^\top}
+\newcommand{\Row}{\text{Row}}
+\newcommand{\wt}{\text{wt}}
 
 \newcommand{\ACfour}[5]{A_{#1} &= a_{#2}\inv a_{#3} a_{#4}\inv a_{#5}}
 \newcommand{\BCfour}[5]{B_{#1} &= a_{#2}\inv(b_{#3} - b_{#2}) + a_{#2}\inv a_{#3} a_{#4}\inv (b_{#5} - b_{#4})}
 \newcommand{\ABCfour}[5]{\ACfour{#1}{#2}{#3}{#4}{#5}\\\BCfour{#1}{#2}{#3}{#4}{#5}}
+
