--- a/notes/20260118.tex
+++ b/notes/20260118.tex
@@ -96,4 +96,55 @@ CSS型LDPCの構成において、パリティ検査行列 $H_X$ または $H_Z$
   &=\min\left\{\wt(\bm{z}):\bm{z}\in C_X, \bm{z}=(\tHZ)^\top\bm{u}\text{ for some }\bm{u}, \bm{z}\not\in C_Z^\top\right\}\\
 \end{align}
 提案された設計は、これらの境界を可能な限り大きくすることを目的としている。[26]では、符号語に対応する二進部分行列を非二進体へ持ち上げることで、それらがもはや符号語を表さなくなるようにしている。これは非二進持ち上げによる潜在ベース境界の拡大と見なすことができる。
+\section{行列の設計方法}
+この章では、上記の問題設定に基づき、
+\begin{align}
+\HX\HZ^\top = 0,\quad\HX(\tHZ)^\top \neq 0, \quad\HZ(\tHX)^\top \neq 0 
+\end{align}
+かつ$\dxl,\dzl$が大きい、を満たすような潜在行列$\tHX,\tHZ$を構成することを目指す。
+我々は一般化した萩原-今井符号、つまり巡回行列構造の母行列のペアとを定義し、アクティブ行列$\HX,\HZ$間の直交性$\HX\HZ^\top = 0$
+
+列重み$J$、行重み$L$プロトグラフLDPC符号はサイズ$P$の$J\times L$置換行列からなるパリティ検査行列により定義される。
+置換$f:[P]\rightarrow[P]$に対し、対応する$P\times P$の置換行列$F=P(f)$は$F_{x,y}=1\iff f(x)=f(y)$で定義される。
+各行と列は丁度1つの1を持ち、したがってブロック構造がコンパクトであるため母行列は疎である。
+
+我々は一般化された萩原・今井符号を、萩原・今井準巡回CSS符号のプロトグラフ一般化として紹介する。
+サイズ$P$の置換行列$F_i,G_i(i\in[L_2])$に対し、サイズ$(L_2P)\times (LP)$の母行列$\HHX,\HHZ$を以下で定義する。
+\begin{align}
+  (\HHX)_{i,j} &= F_{j-i},\quad (\HHX)_{i,L_2+j}=G_{j-i},\\
+  (\HHZ)_{i,j} &= G_{i-j}^\top,\quad (\HHZ)_{i,L_2+j}=F_{i-j}^\top,
+\end{align}
+すべての添え字は$\bmod{L_2}$で計算される。
+全体を通して、$[L/2]$内のインデックスは$\bmod{L/2}$で計算され、つまり$[L/2]$を$\mathbb{Z}_{L/2}$と同一視する。
+直交性の十分条件は以下で与えられる。
+アクティブ行列$\HX,\HZ$は上の$J$ブロック行から構成される。
+従来の設計は、$\HX,\HZ$と$\HHX,\HHZ$がいずれも直交するように$F_i,G_j$に可換性を課した。
+我々の関心は、母行列の直交性を課さずにアクティブ行列の直交性$\HX\HZ^\top = 0$を満たすことである。
+
+$\HHX$の各ブロック行は、左側は$(F_0,F_1,\dots,F_{L/2-1})$の巡回シフトであり、右側は$(G_0,G_1,\dots,G_{L/2-1})$の巡回シフトである。
+したがってブロックは差分$(j-i)$のみに依存し、母行列の席も差分のみに依存する。
+任意の$i,k\in[L_2]$に対して、$(i,k)$ブロックは
+\begin{align}
+  (\HHX(\HHZ)^\top)_{i,k} = \sum_{u=0}^{L_2-1}\left(F_uG_{k-u} + G_{k-u}F_u\right) =: \Psi_r
+\end{align}
+で与えられ、これは$r=(k-i)\mod L_2$のみに依存する。
+$r\in[L/2]$に対し、すべての$u\in[L/2]$に対し$F_u$と$G_{r-u}$が可換ならば、$\Psi_r=0$である。
+
+\subsection{アクティブ直交性の十分条件}
+我々は、$H_XH_Z\top=0$の十分証券の便利な形を再び導く。
+\begin{align}
+  \Delta := \left\{(k-i)\mod L/2\mid 0\leq i,k\leq J-1\right\}\subseteq[L/2]
+\end{align}
+を定義する。
+以下の定理はこれらの差分で制限される可換性がアクティブ直交性をどのように保証するかを明らかにする。
+\begin{theorem}
+  もし$F_u$と$G_{r-u}$がすべての$r\in\Delta,u\in[L/2]$に対し可換ならば、$\HX\HZ^\top=0$である。
+\end{theorem}
+\begin{proof}
+  すべての$i,k\in[J]$に対し、$r=(k-i)\mod L/2\in \Delta$である。
+  仮定より$\Psi_r=0$なので、すべての$i,k\in[J]$に対し$(\HHX(\HHZ)^\top)_{i,k}=\Psi_{(k-i)\mod L/2}=0$であり、$\HX\HZ^\top=0$である。
+\end{proof}
+
+
+
 \end{document}
