--- a/notes/command.tex
+++ b/notes/command.tex
@@ -36,6 +36,10 @@
 \newcommand{\HZ}{H_Z}
 \newcommand{\tHX}{\tilde{H}_X}
 \newcommand{\tHZ}{\tilde{H}_Z}
+\newcommand{\dx}{d_X}
+\newcommand{\dz}{d_Z}
+\newcommand{\dxl}{\dx^{(\text{lat})}}
+\newcommand{\dzl}{\dz^{(\text{lat})}}
 \newcommand{\tr}{^\top}
 \newcommand{\Row}{\text{Row}}
 \newcommand{\wt}{\text{wt}}
