--- a/notes/20260118.tex
+++ b/notes/20260118.tex
@@ -240,4 +240,62 @@ APの合成関数は再びAPであり、$\Sigma(x) = Ax + B$となるため、
 第3節の一般理論と第4節の逐次構築法を、構築可能な最小ケースである$J = 3, L = 12, P = 768$に対して具体化する。
 まず明示的な$\Delta, \Gamma, \Psi_r$を与え、アクティブ行列$\HX,\HZ$のアクティブ直交条件を明確化した後、
 交換表とAPMパラメータを設計し、最後に距離境界とFERを評価する。
+\subsection{構造とアクティブ部の直交性}
+$J=3, L/2=6$に対し、各ブロック行は前の行のサイクルシフトであり、$\HHX,\HHZ$は$6\times 12$のブロック巡回構造である：
+\begin{align}
+  \HHX &= \left( \begin{array}{cccccc|cccccc}
+  F_0 & F_1 & F_2 & F_3 & F_4 & F_5 & G_0 & G_1 & G_2 & G_3 & G_4 & G_5 \\
+  F_5 & F_0 & F_1 & F_2 & F_3 & F_4 & G_5 & G_0 & G_1 & G_2 & G_3 & G_4 \\
+  F_4 & F_5 & F_0 & F_1 & F_2 & F_3 & G_4 & G_5 & G_0 & G_1 & G_2 & G_3 \\ \hline
+  F_3 & F_4 & F_5 & F_0 & F_1 & F_2 & G_3 & G_4 & G_5 & G_0 & G_1 & G_2 \\
+  F_2 & F_3 & F_4 & F_5 & F_0 & F_1 & G_2 & G_3 & G_4 & G_5 & G_0 & G_1 \\
+  F_1 & F_2 & F_3 & F_4 & F_5 & F_0 & G_1 & G_2 & G_3 & G_4 & G_5 & G_0
+  \end{array} \right).\\
+  \HHZ &= \left( \begin{array}{cccccc|cccccc}
+  G'_0 & G'_5 & G'_4 & G'_3 & G'_2 & G'_1 & F'_0 & F'_5 & F'_4 & F'_3 & F'_2 & F'_1 \\
+  G'_1 & G'_0 & G'_5 & G'_4 & G'_3 & G'_2 & F'_1 & F'_0 & F'_5 & F'_4 & F'_3 & F'_2 \\
+  G'_2 & G'_1 & G'_0 & G'_5 & G'_4 & G'_3 & F'_2 & F'_1 & F'_0 & F'_5 & F'_4 & F'_3 \\ \hline
+  G'_3 & G'_2 & G'_1 & G'_0 & G'_5 & G'_4 & F'_3 & F'_2 & F'_1 & F'_0 & F'_5 & F'_4 \\
+  G'_4 & G'_3 & G'_2 & G'_1 & G'_0 & G'_5 & F'_4 & F'_3 & F'_2 & F'_1 & F'_0 & F'_5 \\
+  G'_5 & G'_4 & G'_3 & G'_2 & G'_1 & G'_0 & F'_5 & F'_4 & F'_3 & F'_2 & F'_1 & F'_0
+  \end{array} \right).
+\end{align}
+ここで、単純のために、$A'$は$A$の転置を表す。
+例えば、$\HHX(\HHZ)^\top$の(0,1)ブロックは
+\begin{align}
+  (\HHX(\HHZ)^\top)_{0,1} &= F_0G_1 + F_1G_0 + F_2G_5 + F_3G_4 + F_4G_3 + F_5G_2\\
+  &\quad +G_0F_1 + G_1F_0 + G_2F_5 + G_3F_4 + G_4F_3 + G_5F_2\\
+  &= \Psi_1
+\end{align}
+$\Delta=\{0,1,2,4,5\}$について、
+\begin{align}
+  \Gamma = \{(i,j)\in[L/2]^2\mid i+j\not\equiv 3(\bmod 6)\} = [L/2]^2\backslash\{(0,3),(1,2),(2,1),(3,0),(4,5),(5,4)\}
+\end{align}
+$J=3$におけるアクティブ行列$\HX,\HZ$に対して、
+\begin{align}
+  \HX\HZ^\top = (\Psi_{(k-i)\bmod 6})_{0\leq i,k\leq 2} = \begin{bmatrix}
+    \Psi_0 & \Psi_1 & \Psi_2 \\
+    \Psi_5 & \Psi_0 & \Psi_1 \\
+    \Psi_4 & \Psi_5 & \Psi_0
+  \end{bmatrix}
+\end{align}
+したがって、アクティブ部の直交性は以下と等価である。
+\begin{align}
+  \Psi_r = 0 \qquad(r\in\{0,1,2,3,4,5\}=\Delta)
+\end{align}
+よって$r=3$の相互性は自由に保たれる。
+母行列の積$\HHX(\HHZ)^\top$は
+\begin{align}
+  \HHX(\HHZ)^\top = (\Psi_{(k-i)\bmod 6})_{0\leq i,k\leq 5} = \left(\begin{array}{ccc|ccc}
+    \Psi_0 & \Psi_1 & \Psi_2 & \Psi_3 & \Psi_4 & \Psi_5 \\
+    \Psi_5 & \Psi_0 & \Psi_1 & \Psi_2 & \Psi_3 & \Psi_4 \\
+    \Psi_4 & \Psi_5 & \Psi_0 & \Psi_1 & \Psi_2 & \Psi_3 \\ \hline
+    \Psi_3 & \Psi_4 & \Psi_5 & \Psi_0 & \Psi_1 & \Psi_2 \\
+    \Psi_2 & \Psi_3 & \Psi_4 & \Psi_5 & \Psi_0 & \Psi_1 \\
+    \Psi_1 & \Psi_2 & \Psi_3 & \Psi_4 & \Psi_5 & \Psi_0
+  \end{array}\right)
+\end{align}
+
+
+
 \end{document}
