--- a/notes/command.tex
+++ b/notes/command.tex
@@ -43,7 +43,8 @@
 \newcommand{\tr}{^\top}
 \newcommand{\Row}{\text{Row}}
 \newcommand{\wt}{\text{wt}}
-
+\newcommand{\mif}{\text{if }}
+\newcommand{\motherwise}{\text{otherwise}}
 \newcommand{\ACfour}[5]{A_{#1} &= a_{#2}\inv a_{#3} a_{#4}\inv a_{#5}}
 \newcommand{\BCfour}[5]{B_{#1} &= a_{#2}\inv(b_{#3} - b_{#2}) + a_{#2}\inv a_{#3} a_{#4}\inv (b_{#5} - b_{#4})}
 \newcommand{\ABCfour}[5]{\ACfour{#1}{#2}{#3}{#4}{#5}\\\BCfour{#1}{#2}{#3}{#4}{#5}}
