--- a/notes/20260125/refs.bib
+++ b/notes/20260125/refs.bib
@@ -4,3 +4,12 @@
   journal={arXiv preprint arXiv:2506.15636},
   year={2025}
 }
+@misc{kasai2026breakingorthogonalitybarrierquantum,
+      title={Breaking the Orthogonality Barrier in Quantum LDPC Codes}, 
+      author={Kenta Kasai},
+      year={2026},
+      eprint={2601.08824},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2601.08824}, 
+}
