--- a/notes/template.tex
+++ b/notes/template.tex
@@ -20,7 +20,7 @@
 \newtheorem{proposition}[definition]{命題}
 \newtheorem{requirement}[definition]{要請}
 \newtheorem{example}[definition]{例}
-\input{command.tex}
+\input{../command.tex}
 % =========================================
 \begin{document}
 
